--- a/test/fixtures/restaurants.yml
+++ b/test/fixtures/restaurants.yml
@@ -1,11 +1,12 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
-  description: MyText
+  name: Sally's
+  description: Best pizza in new haven
   phone_number: MyString
   address: MyString
   city: MyString
+  
   state: MyString
   zip_code: MyString
 
