--- a/test/fixtures/restaurants.yml
+++ b/test/fixtures/restaurants.yml
@@ -1,14 +1,14 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: Sally's
-  description: Best pizza in new haven
+  name: MyString
+  description: MyString
   phone_number: MyString
   address: MyString
   city: MyString
-  
   state: MyString
   zip_code: MyString
+  owner_id: 1
 
 two:
   name: MyString
